tests/macro-tests/cases/widget_new/missing_value3.stderr
error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> cases/widget_new/missing_value3.rs:8:9
   |
 6 |       let _ = Wgt! {
   |  _____________-
 7 | |         // we expected an error here.
 8 | |         cursor = ;
   | |         ^^^^^^
...  |
11 | |     };
   | |_____- argument #1 is missing
   |
note: method defined here
  --> $WORKSPACE/crates/zng-wgt-input/src/misc.rs
   |
   | pub fn cursor(child: impl IntoUiNode, cursor: impl IntoVar<CursorSource>) -> UiNode {
   |        ^^^^^^
help: provide the argument
  --> $WORKSPACE/crates/zng-wgt/src/wgt.rs
   |
   - #[widget($crate::Wgt)]
   + (/* cursor */)
   |
